kubernetes/infra/longhorn/ingress.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`longhorn.lan.juusoleinonen.fi`)
      priority: 10
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: ip-whitelist
  tls:
    secretName: longhorn-certificate
